# pyclibase

./: .gitignore  LICENSE  mise.toml  my_interactive_app.py  pyproject.toml
src/pyclibase/: __init__.py  __main__.py  my_logger.py  pyclibase.py
tests/: clitestbase.py  conftest.py  test_00_conftest_01_basic.py  test_00_conftest_02_interactive.py  test_01_options.py  test_02_interactive.py
