[project]
name = "pyclibase"
dynamic = ["version"]
description = "Python library for CLI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
urls = { "Homepage" = "https://github.com/ytani01/pyclibase" }
keywords = ["pyclibase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "pyclickutils",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
pyclibase = "pyclibase.__main__:main"

[tool.ruff]
line-length = 78
target-version = "py311"
lint.select = ["E", "F", "I"]
exclude = ["tests/data"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = "tests"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-mock",
    "ruff>=0.12.3",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
    "pyright>=1.1.403",
]
samples = [
]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.uv.sources]
pyclickutils = { path = "../pyclickutils", editable = true }
